Update: fixed FAQ collapse

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1041,7 +1041,7 @@ body[class*="opened"] ._anni_menu_svg_path .mkdf-fullscreen-menu-opener-icon rec
     color: #dc3545;
     font-weight: 600;
     font-family: "Source Serif Pro", serif;
-    font-size: 1rem;
+    font-size: 1.125rem;
     padding-left: 1rem;
 
 }
