--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -97,6 +97,13 @@
     display: block;
 }
 
+@media screen and (min-width: 1366px) {
+
+    #graphic-design-link {
+        font-size: 3.90rem;
+    }
+}
+
 .__anni_show_list_item a {
     text-decoration: none;
     color: #000;
@@ -247,6 +254,7 @@
     height: 12.5rem;
     background-color: #fff;
 }
+
 .__anni_welove_client_work img {
     border: solid #000 0.0625rem;
     width: 18.0625rem;
@@ -269,66 +277,49 @@
 .__anni__wholove_portfolio_client>div {
     /*margin-top: 8rem;*/
 }
-.__anni__wholove_portfolio_client_right{
-    min-width: 95.75em;;
+
+.__anni__wholove_portfolio_client_right {
+    min-width: 95.75em;
+    ;
     display: flex;
     justify-content: flex-end;
 }
 
-.__anni_wholove_client_on_right_img{
+.__anni_wholove_client_on_right_img {
     display: flex;
     justify-content: flex-end;
 }
-@media screen and (max-width: 1500px) {
 
+
+
+
+
+@media screen and (max-width: 1708px) {
+    .__anni__wholove_portfolio_client {
+        position: relative;
+        left: -9%;
+        width: 75.75rem;
+        height: 20vh;
+        margin-top: 5rem!important;
+        margin-bottom: 5rem!important;
+    }
 }
 @media screen and (max-width: 1365px) {
-
-    .__anni_wholove_bg_client_name {
-        font-size: 6rem;
-        top: -104%;
-        right: 0;
-    }
-
-    .__anni_wholove_client_on_right_name {
-        font-size: 6rem;
-        top: -110%;
-        right: 0;
-    }
-
     .__anni__wholove_portfolio_client div {
-        display: inline-flex;
-        flex-direction: row;
-        flex-flow: wrap;
-        margin-top: 0;
+        width: 2rem;
     }
 
-    .__anni__wholove_portfolio_client div figure {
-        height: fit-content;
+    .__anni__wholove_portfolio_client img {
+        width: 15.0625rem;
+        height: 10.5rem;
     }
 
-    .__anni__wholove_portfolio_client div figure img {
-        width: 35vw;
+    .__anni__wholove_portfolio_client {
+        position: relative;
+        left: -9%;
     }
-
-    .__anni__wholove_portfolio_client div {
-        height: 15vh;
-        margin-top: 3rem;
-
-    }
-}
-
-
-
-@media screen and (min-width: 1365px) {
-    .__anni__wholove_portfolio_client div {
-        /*  height: 26vh;*/
-    }
-
-    .__anni__wholove_portfolio_client {}
 
     .__anni_wholove_client h3 {
-
         font-size: 1.8rem;
     }
 
@@ -343,12 +334,13 @@
     }
 
     .__anni_wholove_client_on_right_name {
-        /*top: -82%;*/
+        position: relative;
+        left: -23%;
     }
 
     .__anni_wholove_bg_client_name {
-        top: -38%;
-        left: -21%;
+        top: -123px;
+        left: -104px;
         margin-bottom: 7.5rem;
     }
 }
@@ -366,7 +358,7 @@
         font-size: 5rem;
 
     }
- 
+
 
     .__anni__wholove_portfolio_client div {
         display: inline-flex;
@@ -406,6 +398,7 @@
 @media screen and (max-width: 512px) {
     .__anni_welove_client_img img {
         width: 80vw;
+        height: auto;
     }
 
     .__anni_wholove_client_on_right_name {}
@@ -463,7 +456,10 @@
     fill: #fff;
 
 }
-
+.__anni_answer {
+    display: none;
+    font-family: 'Source Serif Pro';
+}
 .__anni_faq_area>p {
 
     display: block;
@@ -484,6 +480,7 @@
 }
 
 .__anni_answer {
+    display: none;
     font-family: 'Source Serif Pro';
 }
 
@@ -602,6 +599,9 @@
 }
 
 @media screen and (max-width: 768px) {
+    .__contact_content{
+
+    }
     .__contact {
         height: 100%;
         padding: 2rem 1rem;
